# OpenPype-USD-Resolver

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindUSD.cmake
src/: CMakeLists.txt  openPypeResolver.cpp  openPypeResolver.h  plugInfo.json
